--- a/Application/Home/View/index/msg.html
+++ b/Application/Home/View/index/msg.html
@@ -14,12 +14,12 @@
 </head>
 <body>
 
-<div class="page msg_success js_show">
+<div class="page msg_{$status} js_show">
     <div class="weui-msg">
-        <div class="weui-msg__icon-area"><i class="weui-icon-success weui-icon_msg"></i></div>
+        <div class="weui-msg__icon-area"><i class="weui-icon-{$status} weui-icon_msg"></i></div>
         <div class="weui-msg__text-area">
-            <h2 class="weui-msg__title">绑定成功</h2>
-            <p class="weui-msg__desc">您已经成功的绑定了MyCard账号，日后我们会为您提供更加优质的服务</p>
+            <h2 class="weui-msg__title">{$title}</h2>
+            <p class="weui-msg__desc">{$desc}</p>
         </div>
         <div class="weui-msg__opr-area">
             <p class="weui-btn-area">
