--- a/Application/Home/View/index/msg.html
+++ b/Application/Home/View/index/msg.html
@@ -23,7 +23,12 @@
         </div>
         <div class="weui-msg__opr-area">
             <p class="weui-btn-area">
-                <a href="javascript:weixinJSBridge.call('closeWindow');" class="weui-btn weui-btn_primary">关闭</a>
+                <a href="javascript:WeixinJSBridge.call('closeWindow');" class="weui-btn weui-btn_primary">关闭</a>
+            </p>
+        </div>
+        <div class="weui-msg__opr-area">
+            <p class="weui-btn-area">
+                <a href="./index.php?a=set&openid={$openid}" class="weui-btn weui-btn_default">设置</a>
             </p>
         </div>
         <div class="weui-msg__extra-area">
